build pdf examples; remove examples-document from distribution
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2198 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/README
+++ b/examples/README
@@ -2,3 +2,7 @@ The following examples are part of the \PyX{} release __version__. For each
 \PyX{} example the source code and the corresponding output are shown. Please
 pay attention to source code comments within the examples for further
 information.
+
+The examples typically end with "writeEPSfile" and "writePDFfile" method
+calls to create both, a PostScript and a PDF version of the example. Usually
+you want to create just one of the two choices.
