--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -61,6 +61,7 @@ in publication-ready quality.
 \include{bitmap}
 \include{bbox}
 \include{color}
+\include{pattern}
 \include{unit}
 \include{trafo}
 \appendix
