update project description
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2213 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -32,18 +32,10 @@ Andr\'e Wobst}
 \fi
 \begin{abstract}
 \noindent
-\PyX{} is a Python package to create encapsulated PostScript figures. It
-provides classes and methods to access basic PostScript functionality
-at an abstract level. At the same time the emerging structures are
-very convenient to produce all kinds of drawings in a non-interactive
-way. In combination with the Python language itself the user can just
-code any complexity of the figure wanted. Additionally an
-\TeX{}/\LaTeX{} interface enables one to use the famous high quality
-typesetting within the figures.
-
-A major part of \PyX{} on top of the already described basis is the
-provision of high level functionality for complex tasks like 2d plots
-in publication-ready quality.
+\PyX{} is a Python package for the creation of PostScript and PDF files. It
+combines an abstraction of the PostScript drawing model with a TeX/LaTeX
+interface. Complex tasks like 2d and 3d plots in publication-ready quality are
+built out of these primitives.
 \end{abstract}
 
 \tableofcontents
