--- a/manual/pattern.tex
+++ b/manual/pattern.tex
@@ -1,4 +1,4 @@
-\section{Module \module{pattern}}
+\chapter{Module \module{pattern}}
 \label{pattern}
 
 \sectionauthor{J\"org Lehmann}{joergl@users.sourceforge.net} 
